# BigDecimal

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test.cpp
src/: BigDecimal.cpp  BigDecimal.hpp  operations.cpp  operations.hpp
tests/: tests_BigDecimal.cpp
